--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,7 @@ h1 {
     color: white;
     font-size: 3em;
     text-shadow: 2px 2px 4px #000000;
+    margin-top: 150px; /* Ajusta este valor según sea necesario */
 }
 
 .button {
@@ -62,6 +63,7 @@ h1 {
 nav ul {
     list-style: none;
     padding: 0;
+    margin-top: 80px; /* Ajusta este valor según sea necesario */
 }
 
 nav ul li {
