--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Gabriel Weiss Friends';
+    src: url('../css/fonts/GABRWFFR.TTF') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-image: url('../uploads/friends.jpeg'); /* Correcta ruta relativa */
     background-size: cover;
@@ -20,6 +27,7 @@ h1 {
 }
 
 .button {
+    font-family: 'Gabriel Weiss Friends', cursive, sans-serif;
     background-color: #4CAF50;
     border: none;
     color: white;
