--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -1,12 +1,19 @@
 body {
-    background-color: #f0f2f5; /* Un color de fondo suave */
+    background-image: url('../uploads/fondofor.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.05;
+
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
-    font-family: Arial, sans-serif;
+
 }
 
 .container {
@@ -18,7 +25,8 @@ body {
 }
 
 .form-title {
-    font-family: 'Gabriel Weiss Friends';
+
+    font-family: 'Gabriel Weiss Friends', sans-serif;
     color: #333; /* Color oscuro para el título */
     font-size: 2.5em;
     margin-bottom: 20px;
@@ -27,6 +35,7 @@ body {
 
 .upload-form {
     background-color: #ffffff; /* Fondo blanco sólido para el formulario */
+    font-family: 'Gabriel Weiss Friends', sans-serif;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -44,7 +53,7 @@ body {
     display: block;
     margin-bottom: 5px;
     color: #555; /* Color oscuro para las etiquetas */
-    font-family: Arial, sans-serif;
+
     font-size: 1.1em;
 }
 
@@ -66,7 +75,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.1em;
-    font-family: Arial, sans-serif;
+
     transition: background-color 0.3s ease;
 }
 
